--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,42 +4,41 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(93.46% 0.0305 255.11);
+  --background: oklch(96.79% 0.0654 102.26);
   --secondary-background: oklch(100% 0 0);
   --foreground: oklch(0% 0 0);
   --main-foreground: oklch(0% 0 0);
-  --main: oklch(67.47% 0.1726 259.49);
+  --main: oklch(86.03% 0.176 92.36);
   --border: oklch(0% 0 0);
   --ring: oklch(0% 0 0);
   --overlay: oklch(0% 0 0 / 0.8);
   --shadow: 4px 4px 0px 0px var(--border);
-  --chart-1: #5294FF;
-  --chart-2: #FF4D50;
-  --chart-3: #FACC00;
-  --chart-4: #05E17A;
-  --chart-5: #7A83FF;
+  --chart-1: #FACC00;
+  --chart-2: #7A83FF;
+  --chart-3: #FF4D50;
+  --chart-4: #00D696;
+  --chart-5: #0099FF;
   --chart-active-dot: #000;
 }
 
 .dark {
-  --background: oklch(29.23% 0.0626 270.49);
+  --background: oklch(29.28% 0.0373 94.38);
   --secondary-background: oklch(23.93% 0 0);
   --foreground: oklch(92.49% 0 0);
   --main-foreground: oklch(0% 0 0);
-  --main: oklch(67.47% 0.1726 259.49);
+  --main: oklch(79.36% 0.1624 92.49);
   --border: oklch(0% 0 0);
   --ring: oklch(100% 0 0);
   --shadow: 4px 4px 0px 0px var(--border);
-  --chart-1: #5294FF;
-  --chart-2: #FF6669;
-  --chart-3: #E0B700;
-  --chart-4: #04C86D;
-  --chart-5: #7A83FF;
+  --chart-1: #E0B700;
+  --chart-2: #7A83FF;
+  --chart-3: #FF6669;
+  --chart-4: #00BD84;
+  --chart-5: #008AE5;
   --chart-active-dot: #fff;
 }
 
 @theme inline {
-  /* colors from your tokens */
   --color-main: var(--main);
   --color-background: var(--background);
   --color-secondary-background: var(--secondary-background);
@@ -54,24 +53,22 @@
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
 
-  /* geometry + shadows */
   --spacing-boxShadowX: 4px;
   --spacing-boxShadowY: 4px;
   --spacing-reverseBoxShadowX: -4px;
   --spacing-reverseBoxShadowY: -4px;
   --radius-base: 5px;
   --shadow-shadow: var(--shadow);
-
-  /* font weights */
   --font-weight-base: 500;
   --font-weight-heading: 700;
-
-  /* map font utilities to DM Sans */
-  --font-base: var(--font-dm-sans);     /* used by class: font-base */
-  --font-heading: var(--font-dm-sans);  /* used by class: font-heading */
 }
-
+  
 @layer base {
-  body { @apply text-foreground font-base bg-background; }
-  h1, h2, h3, h4, h5, h6 { @apply font-heading; }
+  body {
+    @apply text-foreground font-base bg-background;
+  }
+
+  h1, h2, h3, h4, h5, h6{
+    @apply font-heading;
+  }
 }
